🔄 Update domain: pyland.ru → pylandschool.com
Major updates across the project:
- K8s configs: ingress, configmaps, kustomization (base/staging/prod)
- Core app: API endpoints, schemas, tests, documentation
- Deployment scripts and documentation
- Email addresses: info@pyland.ru → info@pylandschool.com
- ALLOWED_HOSTS, CSRF_TRUSTED_ORIGINS updated
- All test cases updated with new domain
- Fixed linting issues in analyze_db.py

--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -16,12 +16,12 @@ spec:
   ingressClassName: nginx
   tls:
   - hosts:
-    - pyland.ru
-    - www.pyland.ru
-    - api.pyland.ru
+    - pylandschool.com
+    - www.pylandschool.com
+    - api.pylandschool.com
     secretName: pyland-tls
   rules:
-  - host: pyland.ru
+  - host: pylandschool.com
     http:
       paths:
       - path: /
@@ -31,7 +31,7 @@ spec:
             name: web-service
             port:
               number: 8000
-  - host: www.pyland.ru
+  - host: www.pylandschool.com
     http:
       paths:
       - path: /
@@ -41,7 +41,7 @@ spec:
             name: web-service
             port:
               number: 8000
-  - host: api.pyland.ru
+  - host: api.pylandschool.com
     http:
       paths:
       - path: /
