--- a/k8s/overlays/prod/ingress.yaml
+++ b/k8s/overlays/prod/ingress.yaml
@@ -17,18 +17,18 @@ metadata:
 
     # CORS
     nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "https://pyland.ru"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://pylandschool.com"
 
 spec:
   tls:
   - hosts:
-    - pyland.ru
-    - www.pyland.ru
-    - api.pyland.ru
+    - pylandschool.com
+    - www.pylandschool.com
+    - api.pylandschool.com
     secretName: pyland-tls-cert
 
   rules:
-  - host: pyland.ru
+  - host: pylandschool.com
     http:
       paths:
       - path: /
@@ -39,7 +39,7 @@ spec:
             port:
               number: 8000
 
-  - host: www.pyland.ru
+  - host: www.pylandschool.com
     http:
       paths:
       - path: /
@@ -50,7 +50,7 @@ spec:
             port:
               number: 8000
 
-  - host: api.pyland.ru
+  - host: api.pylandschool.com
     http:
       paths:
       - path: /
