--- a/k8s/timeweb-deploy.yaml
+++ b/k8s/timeweb-deploy.yaml
@@ -16,8 +16,8 @@ metadata:
 data:
   DEBUG: "False"
   K8S_DEPLOYMENT: "True"
-  ALLOWED_HOSTS: "pyland.ru,www.pyland.ru,api.pyland.ru,188.225.37.90"
-  CSRF_TRUSTED_ORIGINS: "https://pyland.ru,https://www.pyland.ru,https://api.pyland.ru,http://pyland.ru:30796"
+  ALLOWED_HOSTS: "pylandschool.com,www.pylandschool.com,api.pylandschool.com,188.225.37.90"
+  CSRF_TRUSTED_ORIGINS: "https://pylandschool.com,https://www.pylandschool.com,https://api.pylandschool.com,http://pylandschool.com:30796"
   CSRF_COOKIE_SECURE: "True"
   CSRF_COOKIE_HTTPONLY: "True"
   CSRF_COOKIE_SAMESITE: "Lax"
@@ -28,7 +28,7 @@ data:
   REDIS_URL: "redis://redis-service:6379/0"
   CELERY_BROKER_URL: "redis://redis-service:6379/0"
   CELERY_RESULT_BACKEND: "redis://redis-service:6379/0"
-  SITE_URL: "http://pyland.ru"
+  SITE_URL: "http://pylandschool.com"
   EMAIL_BACKEND: "django.core.mail.backends.smtp.EmailBackend"
   EMAIL_HOST: "smtp.gmail.com"
   EMAIL_PORT: "587"
