--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -22,7 +22,7 @@ configMapGenerator:
   - name: django-config
     literals:
       - DEBUG=False
-      - ALLOWED_HOSTS=pyland.ru,www.pyland.ru,194.87.215.91
+      - ALLOWED_HOSTS=pylandschool.com,www.pylandschool.com,194.87.215.91
       - DATABASE_URL=postgresql://pyland_prod_user:VXR8K9mN2pL5vT3wQ7jH6fY4nB1xC0eD8sA5kU9rM3g=@postgres-service:5432/pyland_db
       - REDIS_URL=redis://redis-service:6379/0
       - CELERY_BROKER_URL=redis://redis-service:6379/0
